# SharpGate

./: README.md  pyproject.toml  requirements.txt
sharpgate/: __main__.py  cli.py  connection.py
sharpgate/analyser/: classifier.py  models.py  paths.py  spn_analysis.py
sharpgate/collector/: constrained.py  rbcd.py  sensitive_accounts.py  unconstrained.py
sharpgate/commands/: generator.py  impacket_cmds.py  mimikatz_cmds.py  other_cmds.py  rubeus_cmds.py
sharpgate/output/: console.py  diagram.py  tables.py
